[gd_scene load_steps=13 format=2]

[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/Icons/icon_eject.png" type="Texture" id=1]
[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/Icons/icon_ff.png" type="Texture" id=2]
[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/Icons/icon_rw.png" type="Texture" id=3]
[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/Icons/icon_stop.png" type="Texture" id=4]
[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/Icons/icon_play.png" type="Texture" id=5]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=7]
[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/cassette_player_menu.gd" type="Script" id=8]
[ext_resource path="res://Scenes/HUD/inventory_item.tscn" type="PackedScene" id=9]
[ext_resource path="res://mods/Moose1002.CozyCassettes/UI/panel_cassette_player.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/Themes/button_tan_normal.tres" type="StyleBox" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_char = 8
font_data = ExtResource( 6 )

[node name="cassette_player" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -488.24
margin_top = -199.5
margin_right = 488.24
margin_bottom = 199.5
theme = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.403931

[node name="Panel" type="Panel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_styles/panel = ExtResource( 10 )

[node name="item" parent="." instance=ExtResource( 9 )]
anchor_left = 0.453
anchor_top = 0.307
anchor_right = 0.545
anchor_bottom = 0.533
margin_left = -0.105438
margin_top = 0.00699615
margin_right = 0.0584106
margin_bottom = -0.167023
button_mask = 0

[node name="load_button" type="Button" parent="."]
anchor_left = 0.0319924
anchor_top = 0.0728722
anchor_right = 0.278429
anchor_bottom = 0.152872
margin_top = -0.576004
margin_right = 0.00799561
margin_bottom = 5.504
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 11 )
text = "Load Cassette"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="close_button" type="Button" parent="."]
anchor_left = 0.965488
anchor_top = -0.071448
anchor_right = 1.02488
anchor_bottom = 0.026176
margin_left = 0.12793
margin_top = -0.492264
margin_bottom = -5.44424
text = "x"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="cassette_id" type="Label" parent="."]
anchor_left = 0.312
anchor_top = 0.05
anchor_right = 0.688
anchor_bottom = 0.135
margin_left = -0.661774
margin_top = 0.0499992
margin_right = 0.181763
margin_bottom = 0.134998
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
text = "No Cassette Loaded"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 0.95
anchor_bottom = 0.9
margin_top = 0.168976
margin_bottom = 10.369
custom_constants/separation = 32
alignment = 1

[node name="play_button" type="Button" parent="HBoxContainer"]
margin_left = 150.0
margin_right = 240.0
margin_bottom = 94.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 93, 17.4001 )
custom_styles/normal = ExtResource( 11 )
icon = ExtResource( 5 )

[node name="rewind_button" type="Button" parent="HBoxContainer"]
margin_left = 272.0
margin_right = 362.0
margin_bottom = 94.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 93, 17 )
custom_styles/normal = ExtResource( 11 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="fastforward_button" type="Button" parent="HBoxContainer"]
margin_left = 394.0
margin_right = 484.0
margin_bottom = 94.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 93, 17 )
custom_styles/normal = ExtResource( 11 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="eject_button" type="Button" parent="HBoxContainer"]
margin_left = 516.0
margin_right = 606.0
margin_bottom = 94.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 93, 17 )
custom_styles/normal = ExtResource( 11 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="stop_button" type="Button" parent="HBoxContainer"]
margin_left = 638.0
margin_right = 728.0
margin_bottom = 94.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 93, 17.4001 )
custom_styles/normal = ExtResource( 11 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="timer" type="Label" parent="."]
anchor_left = 0.834
anchor_top = 0.061
anchor_right = 0.966
anchor_bottom = 0.167
margin_left = -0.144348
margin_top = -4.839
margin_right = -0.0396729
margin_bottom = -0.133003
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[connection signal="pressed" from="load_button" to="." method="_on_load_cassette_pressed"]
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/rewind_button" to="." method="_on_rewind_button_pressed"]
[connection signal="pressed" from="HBoxContainer/fastforward_button" to="." method="_on_fastforward_button_pressed"]
[connection signal="pressed" from="HBoxContainer/eject_button" to="." method="_on_eject_button_pressed"]
[connection signal="pressed" from="HBoxContainer/stop_button" to="." method="_on_stop_button_pressed"]
